標準のBase64のDecoderを使う